# OpenDep

./: .gitignore  README.md  main.py
.github/workflows/: pages.yml
.legacy/: README.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Crawler/: README.md
Resolver/: README.md
Resolver/config/: README.md  resolvers.container.yaml  resolvers.yaml
Resolver/containerization/: README.md  docker-compose.yml  docker_gateway_proxy.py
Resolver/gateway/: README.md  config.py  contract.py  dispatcher.py  errors.py  models.py  registry.py  response.py  router.py  runner.py  service.py
Resolver/spec/: README.md  request.schema.json  response.schema.json
pre-process/: README.md  requirements.txt
pre-process/cargo/: Dockerfile  README.md  build.py  docker-compose.yml  docker-entrypoint.sh  refresh_local_snapshot.sh  tasks.md
pre-process/common/: README.md
pre-process/go/: Dockerfile  (+5 more)
resolving/: README.md
resolving/containerization/images/cargo/: Cargo.toml  Dockerfile  README.md  resolver-entrypoint.sh
resolving/containerization/images/cargo/.cargo/: config.toml
resolving/containerization/images/cargo/runtime-config/: config.indexed.toml  config.online.toml
resolving/containerization/images/cargo/src/: graph.rs  lib.rs  model.rs  registry_index.rs  resolver.rs  util.rs
resolving/containerization/images/cargo/src/batch/: config.rs  db.rs  mod.rs  runner.rs
website/: _config.yml  architecture.md  artifact-details.md  index.md  preprocessing-indexed-mode.md  quick-start.md  usage.md
(+315 files in other folders)
