[package]
name = "rust_deps"
version = "0.1.0"
edition = "2021"
default-run = "cargo_resolver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.63.0"
postgres = {version = "0.19.2" , features = ["with-serde_json-1"] }
log = "0.4.14"
simplelog = "^0.10.0"
anyhow = "1.0.56"
crossbeam = "0.8.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.82"

[[bin]]
name = "cargo_resolver"
path = "src/bin/cargo_resolver.rs"
